--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="block_2-texte">Soyez prévenu immédiatement si une personne malveillante monte sur votre moto.</p>
             <button class="btn_general">En savoir plus</button>
             <div class="notif">
-                <img class="block_2-element-notif" src="img/block_2-element_2-notif.png"/>
+                <img class="block_2-element-notif" src="img/block_2-element_2-notif.png" alt="notification"/>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             <p class="block_2-texte">GeoRide détecte les chutes peu importe la vitesse et prévient vos proches si vous ne signalez pas votre état.</p>
             <button class="btn_general">En savoir plus</button>
             <div class="notif">
-                <img class="block_2-element-notif" src="img/block_2-element_3-notif.png"/>
+                <img class="block_2-element-notif" src="img/block_2-element_3-notif.png" alt="notification"/>
             </div>
         </div>
     </section>
@@ -90,7 +90,7 @@
             </p>
             <button class="btn_general btn_black">En savoir plus</button>
         </div>
-        <img class="block_3-img_boitier"src="img/boitier.png"/>
+        <img class="block_3-img_boitier" src="img/boitier.png" alt="image du boitier"/>
     </section>
     <section id="block_4">
         <div id="block_4_informations">
@@ -103,13 +103,53 @@
         <img id="block_4_img" src="img/block_4-gif.gif" alt="gif">
     </section>
     <ul id="slider_ul">
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
     </ul>
 </main>
+<footer>
+    <section class="section_footer">
+        <a href="#"><img class="logo_footer" src="img/logo.png" alt="logo"></a>
+        <p>GeoRide, c'est le meilleur moyen de protéger et de connecter sa moto grâce à un boîtier compact relié à une puissante application.</p>
+    </section>
+
+    <section class="section_footer">
+        <h4>Navigation</h4>
+        <ul>
+            <li><a href="#">Le boîtier</a></li>
+            <li><a href="#">L'application</a></li>
+            <li><a href="#">Acheter Georide</a></li>
+            <li><a href="#">Avis clients</a></li>
+            <li><a href="#">Souscrire à un abonnement</a></li>
+            <li><a href="#">Mon compte</a></li>
+            <li><a href="#">Le blog</a></li>
+        </ul>
+    </section>
+
+    <section class="section_footer">
+        <h4>Besoin d'aide ?</h4>
+        <ul>
+            <li><a href="#">La FAQ</a></li>
+            <li><a href="#">Le parrainage</a></li>
+            <li><a href="#">Les pièces détachées</a></li>
+            <li><a href="#">L'état du service</a></li>
+            <li><a href="#">Nous contacter</a></li>
+        </ul>
+    </section>
+
+    <section class="section_footer">
+        <h4>Informations</h4>
+        <ul>
+            <li><a href="#">Condition Générales de Ventes</a></li>
+            <li><a href="#">Politique de confidentialité</a></li>
+            <li><a href="#">Demande d’extraction/suppression</a></li>
+            <li><a href="#">Mentions Légales</a></li>
+        </ul>
+    </section>
+</footer>
 </body>
 </html>
