--- a/index.html
+++ b/index.html
@@ -40,6 +40,59 @@
                         <li class="menu_desktop_li"><a href="#">Le blog</a></li>
                 </ul>
         </div>
+        <div id="logo_header">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 511.999 511.999" style="enable-background:new 0 0 511.999 511.999;" xml:space="preserve">
+                <g>
+                    <g>
+                        <path d="M214.685,402.828c-24.829,0-45.029,20.2-45.029,45.029c0,24.829,20.2,45.029,45.029,45.029s45.029-20.2,45.029-45.029
+                            C259.713,423.028,239.513,402.828,214.685,402.828z M214.685,467.742c-10.966,0-19.887-8.922-19.887-19.887
+                            c0-10.966,8.922-19.887,19.887-19.887s19.887,8.922,19.887,19.887C234.572,458.822,225.65,467.742,214.685,467.742z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M372.63,402.828c-24.829,0-45.029,20.2-45.029,45.029c0,24.829,20.2,45.029,45.029,45.029s45.029-20.2,45.029-45.029
+                            C417.658,423.028,397.458,402.828,372.63,402.828z M372.63,467.742c-10.966,0-19.887-8.922-19.887-19.887
+                            c0-10.966,8.922-19.887,19.887-19.887c10.966,0,19.887,8.922,19.887,19.887C392.517,458.822,383.595,467.742,372.63,467.742z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M383.716,165.755H203.567c-6.943,0-12.571,5.628-12.571,12.571c0,6.943,5.629,12.571,12.571,12.571h180.149
+                            c6.943,0,12.571-5.628,12.571-12.571C396.287,171.382,390.659,165.755,383.716,165.755z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M373.911,231.035H213.373c-6.943,0-12.571,5.628-12.571,12.571s5.628,12.571,12.571,12.571h160.537
+                            c6.943,0,12.571-5.628,12.571-12.571C386.481,236.664,380.853,231.035,373.911,231.035z"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <path d="M506.341,109.744c-4.794-5.884-11.898-9.258-19.489-9.258H95.278L87.37,62.097c-1.651-8.008-7.113-14.732-14.614-17.989
+                            l-55.177-23.95c-6.37-2.767-13.773,0.156-16.536,6.524c-2.766,6.37,0.157,13.774,6.524,16.537L62.745,67.17l60.826,295.261
+                            c2.396,11.628,12.752,20.068,24.625,20.068h301.166c6.943,0,12.571-5.628,12.571-12.571c0-6.943-5.628-12.571-12.571-12.571
+                            H148.197l-7.399-35.916H451.69c11.872,0,22.229-8.44,24.624-20.068l35.163-170.675
+                            C513.008,123.266,511.136,115.627,506.341,109.744z M451.69,296.301H135.619l-35.161-170.674l386.393,0.001L451.69,296.301z"/>
+                    </g>
+                </g>
+            </svg>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                <g>
+                    <g>
+                        <path d="M437.02,330.98c-27.883-27.882-61.071-48.523-97.281-61.018C378.521,243.251,404,198.548,404,148
+                            C404,66.393,337.607,0,256,0S108,66.393,108,148c0,50.548,25.479,95.251,64.262,121.962
+                            c-36.21,12.495-69.398,33.136-97.281,61.018C26.629,379.333,0,443.62,0,512h40c0-119.103,96.897-216,216-216s216,96.897,216,216
+                            h40C512,443.62,485.371,379.333,437.02,330.98z M256,256c-59.551,0-108-48.448-108-108S196.449,40,256,40
+                            c59.551,0,108,48.448,108,108S315.551,256,256,256z"/>
+                    </g>
+                </g>
+            </svg>
+            <a href="#">Mon compte</a>
+        </div>
     </div>
    
 </header>
@@ -48,6 +101,7 @@
         <h2 class="block_1-label">Le meilleur moyen de
             protéger et connecter
             sa moto.</h2>
+            <span></span>
         <button class="block_1-button btn_general">Découvrir GeoRide</button>
     </div>
 
@@ -55,15 +109,17 @@
         <div class="block_2-element">
             <img class="block_2-gif" src="img/block_2-gif.gif" alt="gif explication"/>
             <h3>Tracker GPS</h3>
+            <span></span>
             <p class="block_2-texte">Localisez votre moto en temps réel et revivez vos plus belles balades depuis l'appli.</p>
-            <button class="btn_general">En savoir plus</button>
+            <button class="btn_general btn_orange">En savoir plus</button>
         </div>
 
         <div class="block_2-element">
             <img class="block_2-gif" src="img/block_2-element_2.jpg" alt="gif explication"/>
             <h3>Alarme connectée</h3>
+            <span></span>
             <p class="block_2-texte">Soyez prévenu immédiatement si une personne malveillante monte sur votre moto.</p>
-            <button class="btn_general">En savoir plus</button>
+            <button class="btn_general btn_orange">En savoir plus</button>
             <div class="notif">
                 <img class="block_2-element-notif" src="img/block_2-element_2-notif.png" alt="notification"/>
             </div>
@@ -72,8 +128,9 @@
         <div class="block_2-element">
             <img class="block_2-gif" src="img/block_2-element_3.jpg" alt="gif explication"/>
             <h3>Détecteur de chute</h3>
+            <span></span>
             <p class="block_2-texte">GeoRide détecte les chutes peu importe la vitesse et prévient vos proches si vous ne signalez pas votre état.</p>
-            <button class="btn_general">En savoir plus</button>
+            <button class="btn_general btn_orange">En savoir plus</button>
             <div class="notif">
                 <img class="block_2-element-notif" src="img/block_2-element_3-notif.png" alt="notification"/>
             </div>
@@ -83,9 +140,10 @@
         <div class="block_3-contenu">
             <h2>Le boîtier</h2>
             <h1 class="block_3-titreGeoride">GeoRide</h1>
-            <p class="block_3-texte">Un seul boîtier pour localiser votre moto, 
+            <span></span>
+            <p class="block_3-texte"><strong class="strong_white">Un seul boîtier</strong> pour localiser votre moto, 
             recevoir une alerte en cas de mouvement et prévenir vos proches en cas de chute.</p>
-            <p class="block_3-texte">Disponible en France et dans 31 pays en Europe,
+            <p class="block_3-texte">Disponible en <strong class="strong_white">France</strong> et dans <strong class="strong_white">31 pays en Europe</strong>,
             GeoRide se connecte facilement à la batterie de votre moto.
             </p>
             <button class="btn_general btn_black">En savoir plus</button>
@@ -95,31 +153,83 @@
     <section id="block_4">
         <div id="block_4_informations">
             <h2>Connecté à notre puissante application</h2>
-            <p>Votre moto est dans votre poche grâce à l'application GeoRide.
-                Disponible sur iOS et Android, c'est la plus complète et performante du marché !
-                </p>
+            <p><strong class="strong_black">Votre moto est dans votre poche</strong> grâce à l'application GeoRide.</p>
+            <p>Disponible sur <strong class="strong_black">iOS</strong> et <strong class="strong_black">Android</strong>, c'est la plus complète et performante du marché !</p>
+                
             <button id="block_4_btn" class="btn_general btn_black">Découvrir l'application</button>
         </div>
         <img id="block_4_img" src="img/block_4-gif.gif" alt="gif">
     </section>
     <ul id="slider_ul">
         <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
-        <li class="slider_li"><img class="top_img" src="img/logo_virage.png" alt="image roulement"><h2>Enregistrement des trajets</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_entretien.png" alt="image roulement"><h2>Rappels d'entretiens</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_vibration.png" alt="image roulement"><h2>Alerte de vibration</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_batterie.png" alt="image roulement"><h2>Dispositif anti-décharge</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_instantane.png" alt="image roulement"><h2>Localisation instantannée</h2></li>
+        <li class="slider_li"><img class="top_img" src="img/logo_chute.png" alt="image roulement"><h2>Chute en roulant</h2></li>
     </ul>
 </main>
 <footer>
-    <section class="section_footer">
+    <div class="section_footer">
         <a href="#"><img class="logo_footer" src="img/logo.png" alt="logo"></a>
-        <p>GeoRide, c'est le meilleur moyen de protéger et de connecter sa moto grâce à un boîtier compact relié à une puissante application.</p>
-    </section>
+        <p><strong class="strong_white">GeoRide</strong>, c'est le meilleur moyen de protéger et de connecter sa moto grâce à un boîtier compact relié à une puissante application.</p>
+        <div id="reseau_sociaux">
+            <div class="rond_reseaux">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 96.124 96.123" style="enable-background:new 0 0 96.124 96.123;"
+                    xml:space="preserve">
+                    <path d="M72.089,0.02L59.624,0C45.62,0,36.57,9.285,36.57,23.656v10.907H24.037c-1.083,0-1.96,0.878-1.96,1.961v15.803
+                    c0,1.083,0.878,1.96,1.96,1.96h12.533v39.876c0,1.083,0.877,1.96,1.96,1.96h16.352c1.083,0,1.96-0.878,1.96-1.96V54.287h14.654
+                    c1.083,0,1.96-0.877,1.96-1.96l0.006-15.803c0-0.52-0.207-1.018-0.574-1.386c-0.367-0.368-0.867-0.575-1.387-0.575H56.842v-9.246
+                    c0-4.444,1.059-6.7,6.848-6.7l8.397-0.003c1.082,0,1.959-0.878,1.959-1.96V1.98C74.046,0.899,73.17,0.022,72.089,0.02z"/>
+                </svg>
+            </div>
+            <div class="rond_reseaux">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M352,0H160C71.648,0,0,71.648,0,160v192c0,88.352,71.648,160,160,160h192c88.352,0,160-71.648,160-160V160
+                            C512,71.648,440.352,0,352,0z M464,352c0,61.76-50.24,112-112,112H160c-61.76,0-112-50.24-112-112V160C48,98.24,98.24,48,160,48
+                            h192c61.76,0,112,50.24,112,112V352z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path d="M256,128c-70.688,0-128,57.312-128,128s57.312,128,128,128s128-57.312,128-128S326.688,128,256,128z M256,336
+                                c-44.096,0-80-35.904-80-80c0-44.128,35.904-80,80-80s80,35.872,80,80C336,300.096,300.096,336,256,336z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <circle cx="393.6" cy="118.4" r="17.056"/>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <div class="rond_reseaux">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016
+                                c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992
+                                c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056
+                                c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152
+                                c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792
+                                c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44
+                                C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568
+                                C480.224,136.96,497.728,118.496,512,97.248z"/>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+        </div>
+    </div>
 
-    <section class="section_footer">
+    <div class="section_footer">
         <h4>Navigation</h4>
-        <ul>
+        <ul class="ul_footer">
             <li><a href="#">Le boîtier</a></li>
             <li><a href="#">L'application</a></li>
             <li><a href="#">Acheter Georide</a></li>
@@ -128,28 +238,48 @@
             <li><a href="#">Mon compte</a></li>
             <li><a href="#">Le blog</a></li>
         </ul>
-    </section>
-
-    <section class="section_footer">
+    </div>
+    <div class="section_footer span_display">
+        <span class="span_footer"></span>
+    </div>
+    <div class="section_footer span_display">
+        <span class="span_footer"></span>
+    </div>
+    <div class="section_footer">
         <h4>Besoin d'aide ?</h4>
-        <ul>
+        <ul class="ul_footer">
             <li><a href="#">La FAQ</a></li>
             <li><a href="#">Le parrainage</a></li>
             <li><a href="#">Les pièces détachées</a></li>
             <li><a href="#">L'état du service</a></li>
             <li><a href="#">Nous contacter</a></li>
         </ul>
-    </section>
+    </div>
 
-    <section class="section_footer">
+    <div class="section_footer">
         <h4>Informations</h4>
-        <ul>
+        <ul class="ul_footer">
             <li><a href="#">Condition Générales de Ventes</a></li>
             <li><a href="#">Politique de confidentialité</a></li>
             <li><a href="#">Demande d’extraction/suppression</a></li>
             <li><a href="#">Mentions Légales</a></li>
         </ul>
-    </section>
+    </div>
+    <div class="section_footer">
+            <span class="span_footer"></span>
+    </div>
+    <div class="section_footer">
+            <span class="span_footer"></span>
+    </div>
+    <div class="section_footer span_desktop">
+            <span class="span_footer"></span>
+    </div>
+    <div class="section_footer span_desktop">
+            <span class="span_footer"></span>
+    </div>
+    <div class="section_footer">
+        <p><strong class="strong_white">GeoRide</strong> © 2019</p>
+    </div>
 </footer>
 </body>
 </html>
